--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -51,3 +51,69 @@
 .navbar .menu .link:hover{
     border-bottom:  3px solid var(--primary-color);
 }
+
+@media screen and (max-width: 768px) {
+    .navbar{
+        display: none;
+    }
+
+    .moblieNav{
+        width: 100%;
+        height: 70px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 999;
+    }
+
+    .moblieNav .left img{
+        width: 180px;
+    }
+
+    .moblieNav .menuIconCard{
+        padding: 10px;
+        cursor: pointer;
+        background: var(--color-white);
+        font-size: 30px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        font-weight: 500px;
+        justify-content: center;
+        box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    .moblieNav .right{
+        position: absolute;
+        top: 70px;
+        right: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        border-radius: 5px;
+        background: var(--color-white);
+        box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3);
+    }
+
+    .moblieNav .right .menu{
+        display: flex;
+        flex-direction: column;
+        gap: 0.7rem;
+    }
+
+    .moblieNav .right .menu .link{
+        transition: all 300ms ease;
+        font-size: 18px;
+        font-weight: 500;
+    }
+
+    .moblieNav .right .menu .link:hover{
+        color: var(--primary-color);
+    }
+
+    
+}
