--- a/client/src/Components/Stats/Stats.css
+++ b/client/src/Components/Stats/Stats.css
@@ -49,3 +49,10 @@
     background: rgba(0, 0, 0, 0.5);
     z-index: 2;
 }
+
+@media screen and (max-width: 500px) {
+    .stats .content{
+        flex-direction: column;
+        gap: 3rem;
+    }
+}
