--- a/client/src/Components/Services/Services.css
+++ b/client/src/Components/Services/Services.css
@@ -138,3 +138,9 @@
         width: 90vw;
     }
   }
+
+@media screen and (max-width: 350px) {
+    .services{
+        margin-bottom: 4rem;
+    }    
+}
