--- a/client/src/Components/Hero/Hero.css
+++ b/client/src/Components/Hero/Hero.css
@@ -195,9 +195,14 @@
 }
 
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 400px) {
     .hero .content{
         margin-top: 10vh;
+    }
+
+    .hero .content h1{
+        font-size: 30px;
+        line-height: 25px;
     }
     
     .hero .content .heroText{
@@ -215,8 +220,19 @@
         font-size: 15px;
     }
 
+    .hero .foot{
+        margin-bottom: 4rem;
+        flex-direction: column;
+    }
+
     .hero .foot .right .icon{
         font-size: 10px;
         padding: 5px;
+    }
+}
+
+@media screen and (max-width: 200px) {
+    .hero .content{
+        display: none;
     }
 }
