--- a/client/src/Components/Hero/Hero.css
+++ b/client/src/Components/Hero/Hero.css
@@ -6,6 +6,7 @@
     background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.5 ));
     position: relative;
     flex-direction: column;
+    justify-content: center;
 }
 
 .hero .backVideo{
@@ -26,10 +27,13 @@
     gap: 2rem;
     margin-top: 30vh;
     margin-bottom: auto;
+    align-items: center;
 }
 
 .hero .content h5{
-    font-size: 19px;
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: -2rem;
 }
 
 .hero .content h1{
@@ -168,15 +172,26 @@
     background: var(--primary-color);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 950px) {
     .hero .content{
-        margin-top: 20vh;
+        width: 70%;
+    }
+
+    .hero .content .heroText{
+        width: 100%;
     }
 
     .hero .content h1{
+        font-size: 40px;
+        display: flex;
         flex-direction: column;
-        text-align: left;
-        align-items: flex-start;
+        text-align: center;
+    }  
+}
+
+@media screen and (max-width: 768px) {
+    .hero .content{
+        margin-top: 20vh;
     }
 
     .hero .content .heroText{
@@ -184,9 +199,29 @@
     }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .hero .content h1{
         font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }    
+}
+
+@media screen and (max-width: 500px) {
+    .hero .content{
+        width: 100%;
+    }
+
+    .hero .content .heroText{
+        width: 100%;
+    }
+
+    .hero .content h1{
+        font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
     }
 
     .hero .foot{
