--- a/client/src/Pages/About/About.css
+++ b/client/src/Pages/About/About.css
@@ -8,4 +8,74 @@
 .about .aboutHero{
     width: 100%;
     height: 50vh;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about .aboutHero .overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.about .aboutHero img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.about .aboutHero .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+.about .aboutHero .content h1{
+    display: flex;
+    font-size: 50px;
+    color: var(--color-white);
+    font-weight: 600;
+}
+
+.about .body{
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.about .body .card{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 5rem;
+}
+
+.about .body .card .title{
+    width: 300px;
+}
+
+.about .body .cardInfo{
+    display: flex;
+    gap: 2rem;
+}
+
+.about .cardInfo p{
+    flex: 1.5;
+}
+
+.about .cardInfo img{
+    flex: 1;
+    background: red;
 }
