--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,21 @@ body{
   color: inherit;
 }
 
+.title{
+  font-weight: 500;
+  color: var(--primary-color);
+  font-size: 18px;
+  display: flex;
+  gap: 0.2rem;
+  align-items: flex-end;
+}
+
+.title span{
+  width: 45%;
+  height: 4px;
+  background: var(--primary-color);
+}
+
 @media screen and (max-width: 768px) {
   .sidePadding{
     padding-left: 2rem;
