--- a/client/src/Components/Hero/Hero.css
+++ b/client/src/Components/Hero/Hero.css
@@ -39,6 +39,7 @@
 .hero .content h1{
     display: flex;
     align-items: center;
+    flex-direction: column;
     gap: 10px;
     font-size: 60px;
 }
@@ -52,6 +53,9 @@
 
 .hero .content .heroText{
     width: 50%;
+    text-align: center;
+    font-size: 19px;
+    
 }
 
 .hero .content .actions{
@@ -66,6 +70,7 @@
     border: 2px solid var(--primary-color);
     cursor: pointer;
     transition: all 500ms ease-in;
+    font-weight: 500;
 }
 
 .hero .content .actions .btn:hover{
