--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -104,10 +104,13 @@
         box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.5);
         
         right: -1000px;
+        z-index: 1000;
     }
     
     .navbar .right .menu.show{
         animation: animate 0.3s linear forwards;
+        right: 25px;
+        top: 110px;
     }
 
     .navbar .right .menu.hide{
