--- a/client/src/Components/Services/Services.css
+++ b/client/src/Components/Services/Services.css
@@ -132,7 +132,7 @@
 }
 
 .services .content .right .card .front{
-    background: url('../../assets/card/ui.jpg');
+    background: rgb(199, 2, 2);
     background-size: cover;
     background-position: center;
     padding: 60px 40px;
@@ -143,13 +143,13 @@
 }
 
 .services .content .right .up .card:first-child .front{
-    background: url('../../assets/card/web.jpg');
+    background: rgb(99, 12, 12);
     background-size: cover;
     background-position: center;
 }
 
 .services .content .right .down .card:last-child .front{
-    background: url('../../assets/card/market.jpg');
+    background: rgb(99, 12, 12);
     background-size: cover;
     background-position: center;
 }
@@ -164,14 +164,29 @@
 }
 
 .services .content .right .card .front button{
-    width: 120px;
     border: 1px solid var(--color-white);
     background: transparent;
     border-radius: 50px;
-    padding: 8px 20px;
     cursor: pointer;
+    font-weight: 500;
+    font-size: 18px;
     margin-top: 20px;
     color: var(--color-white);
+    transition: all 300ms ease-in;
+}
+
+.services .content .right .card .front button:hover{
+    background: var(--color-white);
+    color: var(--primary-color);
+}
+
+.services .content .right .card .front button .btn{
+    padding: 12px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    
 }
 
 .services .content .right .card .back{
@@ -236,10 +251,11 @@
     margin-right: 15px;
     cursor: pointer;
 }
-
+/*
 .services .content .right .card:hover .cardInner{
     transform: rotateY(180deg);
 }
+*/
 
 @media screen and (max-width: 768px) {
     .services{
