--- a/client/src/Components/Hero/Hero.css
+++ b/client/src/Components/Hero/Hero.css
@@ -241,7 +241,7 @@
 
 @media screen and (max-width: 400px) {
     .hero .content{
-        margin-top: 10vh;
+        margin-top: 12rem;
     }
 
     .hero .content h1{
