--- a/client/src/Pages/Portfolio/Portfolio.css
+++ b/client/src/Pages/Portfolio/Portfolio.css
@@ -1,11 +1,11 @@
-.about{
+.portfolio{
     width: 100%;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
-.about .aboutHero{
+.portfolio .aboutHero{
     width: 100%;
     height: 50vh;
     position: relative;
@@ -14,7 +14,7 @@
     justify-content: center;
 }
 
-.about .aboutHero .overlay{
+.portfolio .aboutHero .overlay{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -24,7 +24,7 @@
     z-index: 1;
 }
 
-.about .aboutHero img{
+.portfolio .aboutHero img{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -35,7 +35,7 @@
     z-index: -1;
 }
 
-.about .aboutHero .content{
+.portfolio .aboutHero .content{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,62 +43,21 @@
     z-index: 2;
 }
 
-.about .aboutHero .content h1{
+.portfolio .aboutHero .content h1{
     display: flex;
     font-size: 50px;
     color: var(--color-white);
     font-weight: 600;
 }
 
-.about .body{
-    margin-top: 5rem;
+.portfolio .aboutHero .content p{
     display: flex;
-    flex-direction: column;
-}
-
-.about .body .card{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin-bottom: 5rem;
-}
-
-.about .body .card .title{
-    width: 300px;
-}
-
-.about .body .cardInfo{
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-}
-
-.about .cardInfo p{
-    flex: 1.5;
     font-size: 20px;
+    color: var(--color-white);
+    font-weight: 600;
 }
 
-.about .cardInfo .imgCard{
-    flex: 1;
-    background: red;
-}
-
-.about .cardInfo .imgCard.one{
-    display: flex;
-    justify-content: flex-end;
-}
-
-.about .cardInfo .imgCard img{
-    width: 40%;
-
-}
-
-.about .cardInfo .imgCard:last-child img{
-    justify-content: flex-end;
-}
-
-.about .team{
+.portfolio .team{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -106,7 +65,7 @@
     margin-top: 2rem;
 }
 
-.about .team .top{
+.portfolio .team .top{
     background: red;
     padding: 10px 40px;
     border-radius: 20px;
@@ -115,14 +74,14 @@
     font-weight: 500;
 }
 
-.about .team .teamMembers{
+.portfolio .team .teamMembers{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     margin-top: 3rem;
 }
 
-.about .team .teamMembers .teamCard{
+.portfolio .team .teamMembers .teamCard{
     width: 350px;
     height: 500px;
     border-radius: 30px 0px 30px 0px;
@@ -130,12 +89,32 @@
     position: relative;
 }
 
-.about .teamMembers .teamCard img{
+.portfolio .team .teamMembers .teamCard .overlay{
+    position: absolute;
+    left: 0;
+    bottom: -100%;
+    z-index: 10;
     width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9), black);   
+    transition: var(--transition);
+}
+
+.portfolio .team .teamMembers .teamCard:hover .overlay{
+    bottom: 0;
+}
+
+.portfolio .teamMembers .teamCard img{
+    width: 100%;
+    transition: var(--transition);
+}
+
+.portfolio .teamMembers .teamCard img:hover{
+    transform: scale(1.06);
 }
 
 
-.about .teamMembers .teamCard .info{
+.portfolio .teamMembers .teamCard .info{
     position: absolute;
     z-index: 10;
     bottom: 0;
@@ -143,8 +122,8 @@
     width: 100%;
 }
 
-.about .teamCard .info .name,
-.about .teamCard .info .role{
+.portfolio .teamCard .info .name,
+.portfolio .teamCard .info .role{
     background: var(--color-white);
     color: var(--color-dark);
     font-weight: 500;
@@ -153,53 +132,89 @@
     display: flex;
 }
 
-.about .teamCard .info .role{
-    background: var(--primary-bg);
+.portfolio .teamCard .info .role{
+    border-color: var(--primary-bg);
+    background: var(--color-white);
     justify-content: flex-end;
     color: var(--color-white);
 }
 
+.portfolio .teamCard .info .role a{
+    display: flex;
+    align-items: center;
+    font-size: 19px;
+    color: var(--primary-bg);
+    gap: 5px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.portfolio .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .portfolio .pagination button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  
+  .portfolio .pagination button:disabled {
+    background-color: #ddd;
+    cursor: not-allowed;
+  }
+  
+  .portfolio .pagination span {
+    margin: 0 10px;
+  }
+
 @media screen and (max-width: 1400px) {
-    .about .team .teamMembers{
+    .portfolio .team .teamMembers{
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media screen and (max-width: 900px) {
-    .about .team .teamMembers{
+    .portfolio .team .teamMembers{
         grid-template-columns: repeat(1, 1fr);
     }
 }
 
 @media screen and (max-width: 768px) {
-    .about .cardInfo{
+    .portfolio .cardInfo{
         flex-direction: column;
     }
 
-    .about .cardInfo.two{
+    .portfolio .cardInfo.two{
         flex-direction: column-reverse;
     }
 
-    .about .cardInfo p{
+    .portfolio .cardInfo p{
         width: 100%;
     }
 
-    .about .body .card .title{
+    .portfolio .body .card .title{
         width: 100%;
     }
 
-    .about .cardInfo .imgCard img{
+    .portfolio .cardInfo .imgCard img{
         width: 100%;
         width: 350px;
     }
 }
 
 @media screen and (max-width: 360px) {
-    .about .team .teamMembers .teamCard{
+    .portfolio .team .teamMembers .teamCard{
         width: 96%;
     }
 
-    .about .cardInfo .imgCard img{
+    .portfolio .cardInfo .imgCard img{
         width: 100%;
     }
 }
