--- a/client/src/Pages/About/About.css
+++ b/client/src/Pages/About/About.css
@@ -104,6 +104,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 2rem;
+    width: 100%;
 }
 
 .about .team .top{
@@ -115,6 +116,28 @@
     font-weight: 500;
 }
 
+.about .team .teamCard{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.about .teamCard .infoTeam{
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+}
+
+.about .teamCard .infoTeam h2{
+    font-size: 55px;
+    font-weight: 400;
+}
+
+.about .teamCard .infoTeam p{
+    font-size: 20px;
+}
+
 .about .team .teamMembers{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -124,39 +147,45 @@
 
 .about .team .teamMembers .teamCard{
     width: 350px;
-    height: 500px;
-    border-radius: 30px 0px 30px 0px;
     overflow: hidden;
     position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .about .teamMembers .teamCard img{
-    width: 100%;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    object-fit: cover;
+    object-position: center;
 }
-
 
 .about .teamMembers .teamCard .info{
-    position: absolute;
-    z-index: 10;
-    bottom: 0;
-    background: red;
-    width: 100%;
-}
-
-.about .teamCard .info .name,
-.about .teamCard .info .role{
-    background: var(--color-white);
-    color: var(--color-dark);
-    font-weight: 500;
-    padding: 10px;
-    font-size: 17px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.about .teamCard .info .role{
-    background: var(--primary-bg);
-    justify-content: flex-end;
-    color: var(--color-white);
+.about .teamMembers .teamCard .name{
+    font-size: 24px;
+    font-weight: 500;
+    color: red;
+}
+
+.about .teamMembers .teamCard .role{
+    font-size: 19px;
+}
+
+.about .associates{
+    margin-top: 2rem;
+    font-weight: 700;
+    width: 100%;
 }
 
 @media screen and (max-width: 1400px) {
@@ -167,7 +196,13 @@
 
 @media screen and (max-width: 900px) {
     .about .team .teamMembers{
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about .team .teamCard{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
 
