--- a/client/src/Pages/Gallery/Gallery.css
+++ b/client/src/Pages/Gallery/Gallery.css
@@ -98,6 +98,9 @@
     height: 100%;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9), black);   
     transition: var(--transition);
+    padding: 20px;
+    color: var(--color-white);
+    line-height: 30px;
 }
 
 .gallery .team .teamMembers .teamCard:hover .overlay{
