--- a/client/src/Pages/Portfolio/Portfolio.css
+++ b/client/src/Pages/Portfolio/Portfolio.css
@@ -98,6 +98,15 @@
     height: 100%;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.9), black);   
     transition: var(--transition);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    color: var(--color-white)
+}
+
+.portfolio .team .teamMembers .teamCard .overlay h3{
+    font-weight: 700;
+    margin-bottom: 1rem;
 }
 
 .portfolio .team .teamMembers .teamCard:hover .overlay{
